# Dispersive-SWE-1D

./: .gitignore  CMakeLists.txt  CudaCheck.h  README.md  Sim.cu  Sim.h  Sim2D.cu  Sim2D.h  Sim2Drender.cpp  Test.cu  WavePackets.cso  imgui.ini  main.cpp  vcpkg.json
